--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MobileSafe</string>
     <string name="guodongwenzi">爱你一万年，爱你经得起考验，飞越了时间的局限，拉近了地域的平面</string>
+    <string name="send_to">Share to..</string>
 </resources>
